[gd_scene load_steps=5 format=3 uid="uid://c0eh1b26pc3b0"]

[ext_resource type="Script" path="res://scenes/menus/settings_menu.gd" id="1_uslla"]
[ext_resource type="AudioStream" uid="uid://dsmf0k7ncjvnx" path="res://sounds/Basic Fire.wav" id="3_pnkvr"]

[sub_resource type="InputEventKey" id="InputEventKey_i7drj"]
device = -1
keycode = 4194305

[sub_resource type="Shortcut" id="Shortcut_c21aj"]
events = [SubResource("InputEventKey_i7drj")]

[node name="SettingsMenu" type="CanvasLayer"]
process_mode = 3
process_priority = 1
script = ExtResource("1_uslla")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.588235, 0.588235, 0.588235, 1)

[node name="MarginContainer" type="MarginContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Label" type="Label" parent="ColorRect/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "Settings"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect/MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_constants/separation = 25

[node name="Label" type="Label" parent="ColorRect/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Music Volume
"

[node name="MusicVolumeSlider" type="HSlider" parent="ColorRect/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
max_value = 1.0
step = 0.01

[node name="MusicVolumeSliderLabel" type="Label" parent="ColorRect/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "80%
"

[node name="HBoxContainer2" type="HBoxContainer" parent="ColorRect/MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2

[node name="MusicButton" type="Button" parent="ColorRect/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 32
text = "Play/Stop Music Sample"

[node name="HBoxContainer3" type="HBoxContainer" parent="ColorRect/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 25

[node name="Label" type="Label" parent="ColorRect/MarginContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "SFX Volume
"

[node name="SFXVolumeSlider" type="HSlider" parent="ColorRect/MarginContainer/VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
max_value = 1.0
step = 0.01

[node name="SFXVolumeSliderLabel" type="Label" parent="ColorRect/MarginContainer/VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "80%
"

[node name="HBoxContainer4" type="HBoxContainer" parent="ColorRect/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="SFXButton" type="Button" parent="ColorRect/MarginContainer/VBoxContainer/HBoxContainer4"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 32
text = "Play/Stop SFX Sample"

[node name="HBoxContainer5" type="HBoxContainer" parent="ColorRect/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 25

[node name="DoneButton" type="Button" parent="ColorRect/MarginContainer/VBoxContainer/HBoxContainer5"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 32
shortcut = SubResource("Shortcut_c21aj")
text = "Back"

[node name="SaveButton" type="Button" parent="ColorRect/MarginContainer/VBoxContainer/HBoxContainer5"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 32
text = "Save"

[node name="MusicAudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_pnkvr")
bus = &"Music"

[node name="SFXAudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_pnkvr")
bus = &"SFX"

[connection signal="value_changed" from="ColorRect/MarginContainer/VBoxContainer/HBoxContainer/MusicVolumeSlider" to="." method="_music_value_changed"]
[connection signal="pressed" from="ColorRect/MarginContainer/VBoxContainer/HBoxContainer2/MusicButton" to="." method="_on_music_button_pressed"]
[connection signal="value_changed" from="ColorRect/MarginContainer/VBoxContainer/HBoxContainer3/SFXVolumeSlider" to="." method="_sfx_value_changed"]
[connection signal="pressed" from="ColorRect/MarginContainer/VBoxContainer/HBoxContainer4/SFXButton" to="." method="_on_sfx_button_pressed"]
[connection signal="pressed" from="ColorRect/MarginContainer/VBoxContainer/HBoxContainer5/DoneButton" to="." method="_on_done_button_pressed"]
[connection signal="pressed" from="ColorRect/MarginContainer/VBoxContainer/HBoxContainer5/SaveButton" to="." method="_on_save_button_pressed"]
